--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<htlm>
+  <head>
+    <meta charset = "utf-8">
+    <style>
+      td {text-align: center; color: black;
+         padding: 5;}
+    </style>
+  </head>
+  <body>
+    <h1> THỜI KHOÁ BIỂU </h1>
+    <table border="1" width="100%">
+      <tr>
+        <th>Tiết</th>
+        <th>Thứ Hai</th>
+        <th>Thứ Ba</th>
+        <th>Thứ Tư</th>
+        <th>Thứ Năm</th>
+        <th>Thứ Sáu</th>
+        <th>Thứ Bảy</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Chào cờ</td>
+        <td>Ngữ Văn</td>
+        <td>Tin học</td>
+        <td>Ngữ Văn</td>
+        <td>Toán</td>
+        <td>Tiếng Anh</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>SHCN</td>
+        <td>Ngữ Văn</td>
+        <td>Tiếng Anh</td>
+        <td>Ngữ Văn</td>
+        <td>Toán</td>
+        <td>Tiếng Anh</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Vật Lý</td>
+        <td>Thể Dục</td>
+        <td>Lịch Sử</td>
+        <td>Địa Lý</td>
+        <td>Ngữ Văn</td>
+        <td>Toán</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td></td>
+      <tr>
+        <td colspan="7"> BUỔI CHIỀU </td>
+      </tr>
+      <tr>
+        <td>1</td> <td>Toán</td> <td>Năng Khiếu</td> <td>Tự chọn</td> <td>Vật lý</td> <td>Tin học</td>
+      </tr>
+    </table>
+  </body>
+</htlm>
