--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <body>
      BÀI TẬP
       <ol>
-        <li> <a href="Contents/gioithieu.html" target="_blank">Gioithieu</a> </li>
-        <li> <a href="Contents/tkb.html" target="_blank">Thoikhoabieu</li> 
+        <li> <a href="contents/gioithieu.html" target="_blank">Gioithieu</a> </li>
+        <li> <a href=contents/tkb.html" target="_blank">Thoikhoabieu</li> 
       </ol>
       TÀI LIỆU
       <ul>
