--- a/contents/tkb.html
+++ b/contents/tkb.html
@@ -1,59 +1,42 @@
-<htlm>
+<html>
   <head>
     <meta charset = "utf-8">
     <style>
-      td {text-align: center; color: black;
-         padding: 5;}
+      td {text-align: center;}
     </style>
   </head>
   <body>
-    <h1> THỜI KHOÁ BIỂU </h1>
-    <table border="1" width="100%">
+    <h1 style="text-align: center;">THỜI KHÓA BIỂU</h1>
+    <table border="1" width="100%" >
       <tr>
-        <th>Tiết</th>
-        <th>Thứ Hai</th>
-        <th>Thứ Ba</th>
-        <th>Thứ Tư</th>
-        <th>Thứ Năm</th>
-        <th>Thứ Sáu</th>
-        <th>Thứ Bảy</th>
+        <th>Tiết</th> <th>Thứ Hai</th> <th>Thứ Ba</th> <th>Thứ Tư</th> <th>Thứ Năm</th> <th>Thứ Sáu</th> <th>Thứ Bảy</th>
       </tr>
       <tr>
-        <td>1</td>
-        <td>Chào cờ</td>
-        <td>Ngữ Văn</td>
-        <td>Tin học</td>
-        <td>Ngữ Văn</td>
-        <td>Toán</td>
-        <td>Tiếng Anh</td>
+        <td colspan="7"><b>BUỔI SÁNG</b></td>
+      </tr>  
+      <tr>
+        <td>1</td> <td>Chào cờ</td> <td>Văn</td> <td>Tin học</td> <td>Văn</td> <td>Toán</td> <td>Tiếng Anh</td>
       </tr>
       <tr>
-        <td>2</td>
-        <td>SHCN</td>
-        <td>Ngữ Văn</td>
-        <td>Tiếng Anh</td>
-        <td>Ngữ Văn</td>
-        <td>Toán</td>
-        <td>Tiếng Anh</td>
+        <td>2</td> <td>Chào cờ</td> <td>Văn</td> <td>Vật Lý</td> <td>Văn</td> <td>Toán</td> <td>Lịch Sử</td>
       </tr>
       <tr>
-        <td>3</td>
-        <td>Vật Lý</td>
-        <td>Thể Dục</td>
-        <td>Lịch Sử</td>
-        <td>Địa Lý</td>
-        <td>Ngữ Văn</td>
-        <td>Toán</td>
+        <td>3</td> <td>Tiếng Anh</td> <td>Quốc phòng</td> <td>Vật Lý</td> <td>Kinh tế</td> <td>Sinh học</td> <td>Địa lý</td>
       </tr>
       <tr>
-        <td>4</td>
-        <td></td>
-      <tr>
-        <td colspan="7"> BUỔI CHIỀU </td>
+        <td>4</td> <td>Tiếng Anh</td> <td>Địa Lý</td> <td>Văn</td> <td>Pháp luật</td> <td>Hóa học</td> <td>Địa lý</td>
       </tr>
       <tr>
-        <td>1</td> <td>Toán</td> <td>Năng Khiếu</td> <td>Tự chọn</td> <td>Vật lý</td> <td>Tin học</td>
+        <td colspan="7"><b>BUỔI CHIỀU</b></td>
+      </tr>
+      <tr>
+        <td>1</td> <td>Hóa học</td> <td>Thể dục</td> <td>Văn TN</td> <td>Tự chọn</td> <td>Tự chọn</td> <td>Nghỉ</td>
+      </tr>
+      <tr>
+        <td>2</td> <td>Sinh học</td> <td>Thể dục</td> <td>Văn TN</td> <td>Tự chọn</td> <td>Lịch Sử</td> <td>Nghỉ</td>
+      </tr>
+      <tr>
+        <td>3</td> <td>Hướng nghiệp</td> <td>Toán TN</td> <td>Vật Lý</td> <td>Kinh tế</td> <td>Tin học</td> <td>Nghỉ</td>
       </tr>
     </table>
   </body>
-</htlm>
