--- a/contents/giới thiệu.html
+++ b/contents/giới thiệu.html
@@ -13,16 +13,23 @@
   </head>
   <body>
     <h1> GIỚI THIỆU BẢN THÂN </h1>
-    Xin chào, mình tên là Lưu Phương Ly. (br)
-17 tuổi, là học sinh trường THPT Ngô Quyền  (br)
-    <td> <img src="Images/.jpg" width="180" height="270">
-    <h2> Tính cách </h2>
-     Vui vẻ, hoà đồng 
-    <h3> Sở thích </h3>
-    nghe nhạc, thưởng thức món ăn ngon
-    <h4> Dự định tương lai</h4>
-    Đậu đại học nguyện vọng mong muốn. <br>
-    Đi du lịch nhiều địa điểm trong nước và thế giới
-
+    <table> 
+      <tr>
+        <td>
+          <img src "../images/ " width = "200" heught = "280">
+        </td>
+        <td>
+         Xin chào, mình tên là Lưu Phương Ly. (br)
+         17 tuổi, là học sinh trường THPT Ngô Quyền  (br)
+         <h2> Tính cách </h2>
+         Vui vẻ, hoà đồng 
+         <h3> Sở thích </h3>
+         nghe nhạc, thưởng thức món ăn ngon
+         <h4> Dự định tương lai</h4>
+         Đậu đại học nguyện vọng mong muốn. <br>
+         Đi du lịch nhiều địa điểm trong nước và thế giới
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
