--- a/contents/giới thiệu.html
+++ b/contents/giới thiệu.html
@@ -16,11 +16,11 @@
     <table> 
       <tr>
         <td>
-          <img src "../images/IMG_2023.jpeg" width = "200" heught = "280">
+          <img src "../images/IMG_2023.jpeg" width = "200" height = "280">
         </td>
         <td>
-         Xin chào, mình tên là Lưu Phương Ly. (br)
-         17 tuổi, là học sinh trường THPT Ngô Quyền  (br)
+         Xin chào, mình tên là Lưu Phương Ly. <br>
+         17 tuổi, là học sinh trường THPT Ngô Quyền <br>
          <h2> Tính cách </h2>
          Vui vẻ, hoà đồng 
          <h3> Sở thích </h3>
