--- a/contents/giới thiệu.html
+++ b/contents/giới thiệu.html
@@ -16,7 +16,7 @@
     <table> 
       <tr>
         <td>
-          <img src "../images/IMG_2023.jpeg" width = "200" height = "280">
+          <img src = "../images/IMG_2023.jpeg" width = "200" height = "280">
         </td>
         <td>
          Xin chào, mình tên là Lưu Phương Ly. <br>
